--- a/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
+++ b/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
@@ -13,7 +13,9 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        
+        <div class="header">
+            some text ...
+        </div>
         
     </body>
 </html>
