--- a/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
+++ b/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
@@ -14,7 +14,16 @@
     </head>
     <body>
         <div class="header">
-            some text ...
+            <div class="logo-box">
+                <img src="./img/logo-white.png" alt="logo" class="logo" >
+            </div>
+            <div class="text-box">
+
+                <h1 class="heading-primary">
+                    <span class="heading-primary-main">OUTDOORS</span>
+                    <span class="heading-primary-sub"> is WHERE LIFE HAPPENS</span>
+                </h1>
+            </div>
         </div>
         
     </body>
