--- a/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
+++ b/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
@@ -23,6 +23,7 @@
                     <span class="heading-primary-main">OUTDOORS</span>
                     <span class="heading-primary-sub"> is WHERE LIFE HAPPENS</span>
                 </h1>
+                <a href="#" class="btn btn-white btn-animated">Discover tours</a>
             </div>
         </div>
         
