--- a/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
+++ b/2. Natours Project — Setup and First Steps (Part 1)/Natours/index.html
@@ -84,13 +84,48 @@
               <p class="feature-box__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Deserunt magni ipsam facere quo incidunt sint corrupti quasi,
-                impedit iste ducimus delectus nulla placeat laboriosam mollitia
-                nam. Officiis praesentium mollitia quos?
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt magni ipsam facere quo incidunt sint corrupti quasi,
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt magni ipsam facere quo incidunt sint corrupti quasi,
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt magni ipsam facere quo incidunt sint corrupti quasi,
               </p>
             </div>
           </div>
         </div>
       </div>
+      
     </main>
     <!-- <section class="grid-test">
         <div class="row">
